[package]
name = "ytx"
version = "0.1.0"
edition = "2024"

[dependencies]
ytt = "1.1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.6.0", features = ["derive"] }
sentencex = "0.1.17"
anyhow = "1.0.102"
console = "0.15"
ollama-rs = "0.3.4"
directories = "6.0.0"
rusqlite = "0.39.0"
regex = "1.12.3"

