[package]
name = "ytx"
license = "MIT"
authors = ["KevinEL-Dev <dev@zookfish.com>"]
description = "A command line utility that generates articles from youtube videos"
repository = "https://github.com/KevinEL-Dev/ytx"
version = "0.1.4"
edition = "2024"

[dependencies]
ytt = "1.1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.6.0", features = ["derive"] }
sentencex = "0.1.17"
anyhow = "1.0.102"
console = "0.15"
ollama-rs = "0.3.4"
directories = "6.0.0"
rusqlite = "0.39.0"
regex = "1.12.3"
ratatui = "0.30.0"
crossterm = "0.29.0"
color-eyre = "0.6.5"
tui-markdown = "0.3.7"
textwrap = {version = "0.16.2",features = ["terminal_size"]}

